19550
@rkuhn reported a hang in the IDE which I believe is due to the following:
```
% scala-hash v2.11.5
Welcome to Scala version 2.11.5-20150101-184742-3fafbc204f (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_65).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :power
** Power User mode enabled - BEEP WHIR GYVE **
** :phase has been set to 'typer'.          **
** scala.tools.nsc._ has been imported      **
** global._, definitions._ also imported    **
** Try  :help, :vals, power.<tab>           **

scala> NoSymbol.outerCalss
<console>:34: error: value outerCalss is not a member of $r.intp.global.NoSymbol
              NoSymbol.outerCalss
                       ^

scala> NoSymbol.outerClass # hangs

[1]+  Stopped                 RUNNER=scala $LIBSCALA/bin/scala-hash "$@"

% bg
[1]+ RUNNER=scala $LIBSCALA/bin/scala-hash "$@" &

% jps
50704 MainGenericRunner
50747 Jps
46530

% jstack 50704 | grep --context=2 outerClass

"main" prio=5 tid=7fee3f000800 nid=0x1097e1000 runnable [1097de000]
   java.lang.Thread.State: RUNNABLE
    at scala.reflect.internal.Symbols$Symbol.outerClass(Symbols.scala:2059)
    at $line13.$read$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$.<init>(<console>:34)
    at $line13.$read$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$$iw$.<clinit>(<console>)
```

In the IDE crash, we got to `outerClass` via:
```
at scala.reflect.internal.Symbols$Symbol.outerClass(Symbols.scala:2057)
at scala.tools.nsc.transform.ExplicitOuter.scala$tools$nsc$transform$ExplicitOuter$$isInner(ExplicitOuter.scala:43)
at scala.tools.nsc.transform.ExplicitOuter.transformInfo(ExplicitOuter.scala:177)
at scala.tools.nsc.transform.InfoTransform$Phase$$anon$1.transform(InfoTransform.scala:38)
at scala.reflect.internal.Symbols$Symbol.rawInfo(Symbols.scala:1571)
at scala.reflect.internal.Symbols$Symbol.info(Symbols.scala:1491)
at scala.reflect.internal.Symbols$Symbol.isDerivedValueClass(Symbols.scala:786)
at scala.tools.nsc.transform.Erasure$$anonfun$javaSig$1.scala$tools$nsc$transform$Erasure$$anonfun$$jsig$1(Erasure.scala:288)
at scala.tools.nsc.transform.Erasure$$anonfun$javaSig$1.scala$tools$nsc$transform$Erasure$$anonfun$$jsig$1(Erasure.scala:312)
at scala.tools.nsc.transform.Erasure$$anonfun$javaSig$1.apply(Erasure.scala:331)
at scala.tools.nsc.transform.Erasure$$anonfun$javaSig$1.apply(Erasure.scala:191)
at scala.reflect.internal.SymbolTable.enteringPhase(SymbolTable.scala:235)
at scala.tools.nsc.transform.Erasure.javaSig(Erasure.scala:191)
at org.scalaide.core.internal.compiler.JavaSig$JavaSignature$$anonfun$1.apply(JavaSig.scala:63)
```
